[gd_scene load_steps=12 format=3 uid="uid://b6u1qbm47st80"]

[ext_resource type="PackedScene" uid="uid://d4cglusg6xedr" path="res://Scenes/worldEnviroment.tscn" id="1_5olho"]
[ext_resource type="MeshLibrary" uid="uid://botp7xmexpxib" path="res://Source/tilesSet.meshlib" id="1_bvx24"]
[ext_resource type="Script" path="res://Scripts/Decoration.gd" id="2_8wagy"]
[ext_resource type="MeshLibrary" uid="uid://upfgfp4jxcvh" path="res://Source/objectsTileSet.meshlib" id="2_xx110"]
[ext_resource type="PackedScene" uid="uid://btkw3v5agbf8i" path="res://Scenes/littleLamp.tscn" id="3_nnb20"]
[ext_resource type="PackedScene" uid="uid://dhdm6m1ymi7fa" path="res://Scenes/floorLamp.tscn" id="3_tg436"]
[ext_resource type="PackedScene" uid="uid://d14kt64t03jv4" path="res://Scenes/ouwuija.tscn" id="4_n5kxh"]
[ext_resource type="PackedScene" uid="uid://ccvdfkxkbcjfg" path="res://Scenes/lamp.tscn" id="7_y86gh"]
[ext_resource type="AudioStream" uid="uid://bay4e0y1elqwf" path="res://Audio/Switch.mp3" id="8_scetx"]
[ext_resource type="Script" path="res://Scripts/Crickets.gd" id="9_d4nyy"]
[ext_resource type="AudioStream" uid="uid://68id6x5tmdv7" path="res://Audio/crickets.wav" id="10_p7tcy"]

[node name="3DMenuScene" type="Node3D"]

[node name="WorldEnvironment" parent="." instance=ExtResource("1_5olho")]

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.731582, -0.323861, 0.599918, 0.0638345, 0.908638, 0.412676, -0.678758, -0.263611, 0.685417, 23.456, 2.02751, 26.4728)
fov = 86.5516

[node name="Decoration" type="Node3D" parent="."]
script = ExtResource("2_8wagy")

[node name="Lamp5" parent="Decoration" instance=ExtResource("3_nnb20")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 19.3885, 0.00743186, 27.1854)

[node name="1" type="GridMap" parent="Decoration"]
mesh_library = ExtResource("1_bvx24")
cell_size = Vector3(1, 1, 1)
data = {
"cells": PackedInt32Array(18, 19, 0, 19, 19, 0, 20, 19, 0, 21, 19, 0, 22, 19, 0, 23, 19, 0, 24, 19, 0, 18, 20, 0, 18, 24, 0, 18, 25, 0, 18, 22, 4, -131053, 20, 1, -131053, 21, 1, -131053, 22, 1, -131053, 23, 1, -131053, 24, 1, -131053, 25, 1, -131052, 25, 1, -131051, 25, 1, -131050, 25, 1, -131049, 25, 1, -131048, 25, 1, -131048, 24, 1, -131048, 23, 1, -131048, 22, 1, -131048, 21, 1, -131048, 20, 1, -131049, 20, 1, -131050, 20, 1, -131051, 20, 1, -131052, 20, 1, -131052, 21, 1, -131052, 22, 1, -131051, 21, 1, -131051, 22, 1, -131052, 23, 1, -131052, 24, 1, -131051, 23, 1, -131051, 24, 1, -131050, 24, 1, -131050, 23, 1, -131050, 22, 1, -131050, 21, 1, -131049, 21, 1, -131049, 22, 1, -131049, 23, 1, -131049, 24, 1, -131055, 25, 3, -131055, 24, 3, -131055, 23, 3, -131055, 22, 3, -131055, 21, 3, -131055, 20, 3, -131055, 19, 3, -131055, 18, 3, -131056, 18, 3, -131056, 19, 3, -131056, 20, 3, -131056, 21, 3, -131056, 22, 3, -131056, 23, 3, -131056, 24, 3, -131056, 25, 3, -131057, 25, 3, -131057, 24, 3, -131057, 23, 3, -131057, 22, 3, -131057, 21, 3, -131057, 20, 3, -131057, 19, 3, -131057, 18, 3, -131058, 18, 3, -131058, 19, 3, -131058, 20, 3, -131058, 21, 3, -131058, 22, 3, -131058, 23, 3, -131058, 24, 3, -131059, 23, 3, -131059, 22, 3, -131059, 21, 3, -131059, 20, 3, -131059, 19, 3, -131059, 18, 3, -131060, 18, 3, -131060, 19, 3, -131060, 20, 3, -131060, 21, 3, -131060, 22, 3, -131059, 17, 3, -131058, 17, 3, -131057, 17, 3, -131056, 17, 3, -131055, 17, 3, -131060, 17, 3, -131054, 18, 0, -131054, 17, 0, -131054, 16, 0, -131055, 16, 0, -131056, 16, 0, -131057, 16, 0, -131058, 16, 0, -131059, 16, 0, -131060, 16, 0, -131061, 16, 0, -131061, 17, 0, -131061, 18, 0, -131061, 19, 0, -131061, 20, 0, -131061, 21, 0, -131054, 23, 5, -131054, 22, 5, -131054, 21, 5, 196626, 21, 5, 196626, 22, 5, 196626, 23, 5, 196626, 25, 2, 196626, 24, 2, 196625, 24, 2, 196626, 20, 2, 196626, 19, 2, 196627, 19, 2, 196628, 19, 2, 196629, 19, 2, 196630, 19, 2, 196631, 19, 2, 196632, 19, 2, 196632, 20, 2, 196631, 20, 2, 196630, 20, 2, 196629, 20, 2, 196628, 20, 2, 196627, 20, 2, 196627, 21, 2, 196627, 22, 2, 196627, 23, 2, 196627, 24, 2, 196627, 25, 2, 196628, 25, 2, 196628, 24, 2, 196628, 23, 2, 196628, 22, 2, 196629, 22, 2, 196628, 21, 2, 196629, 21, 2, 196630, 21, 2, 196631, 21, 2, 196632, 21, 2, 196632, 22, 2, 196632, 23, 2, 196632, 24, 2, 196632, 25, 2, 196631, 25, 2, 196630, 25, 2, 196629, 25, 2, 196629, 24, 2, 196629, 23, 2, 196630, 24, 2, 196630, 23, 2, 196631, 23, 2, 196631, 24, 2, 196631, 22, 2, 196630, 22, 2, 196625, 23, 2, 196625, 22, 2, 196625, 21, 2, 196625, 20, 2, 196625, 19, 2, 196625, 18, 2, 196626, 18, 2, 196627, 18, 2, 196633, 19, 2, 196633, 20, 2, 196634, 21, 2, 196633, 21, 2, 196633, 22, 2, 196633, 23, 2, 196633, 24, 2, 196634, 23, 2, 196634, 24, 2, 196634, 25, 2, 196633, 25, 2, 196634, 22, 2, 196635, 20, 2, 196635, 19, 2, 196634, 18, 2, 196634, 19, 2, 196634, 20, 2, 196634, 26, 2, 196634, 27, 2, 196633, 27, 2, 196633, 26, 2, 196632, 26, 2, 196631, 26, 2, 196632, 27, 2, 196630, 26, 2, 196629, 26, 2, 196628, 26, 2, 196627, 26, 2, 196626, 26, 2, 196626, 27, 2, 196627, 27, 2, 196627, 28, 2, 196628, 28, 2, 196629, 28, 2, 196629, 27, 2, 196630, 27, 2, 196631, 27, 2, 196628, 27, 2, 196625, 27, 2, 196625, 28, 2, 196626, 28, 2, 196630, 28, 2, 196631, 28, 2, 196628, 29, 2, 196629, 29, 2, 196630, 29, 2, 196631, 29, 2, 196632, 29, 2, 196633, 29, 2, 196633, 28, 2, 196634, 29, 2, 196634, 28, 2, 196632, 28, 2, 196635, 27, 2, 196635, 26, 2, 196635, 25, 2, 196635, 24, 2, 196635, 23, 2, 196635, 22, 2, 196635, 21, 2, -131052, 26, 1, -131053, 26, 1, -131053, 27, 1, -131052, 27, 1, -131052, 28, 1, -131053, 28, 1, -131051, 28, 1, -131050, 28, 1, -131051, 29, 1, -131050, 29, 1, -131052, 29, 1, -131053, 29, 1, -131049, 29, 1, -131048, 29, 1, -131048, 28, 1, -131049, 28, 1, -131050, 27, 1, -131049, 27, 1, -131049, 26, 1, -131051, 27, 1, -131051, 26, 1, -131050, 26, 1, -131048, 26, 1, -131048, 27, 1, -131047, 27, 1, -131047, 26, 1, -131047, 25, 1, -131047, 20, 1, -131047, 21, 1, -131047, 24, 1, -131047, 23, 1, -131046, 23, 1, -131046, 24, 1, -131046, 25, 1, -131045, 24, 1, -131045, 23, 1, -131045, 25, 1, -131044, 23, 1, -131044, 22, 1, -131045, 22, 1, -131045, 21, 1, -131046, 21, 1, -131046, 22, 1, -131047, 22, 1, -131044, 21, 1, -131045, 20, 1, -131046, 20, 1, 25, 19, 0, 26, 19, 0, 27, 19, 0, 28, 19, 0, 28, 20, 0, 18, 26, 0, 18, 27, 0, 18, 28, 0, 18, 29, 0, 19, 30, 0, 18, 30, 0)
}
metadata/_editor_floor_ = Vector3(0, 0, 0)

[node name="2" type="GridMap" parent="Decoration"]
mesh_library = ExtResource("2_xx110")
cell_size = Vector3(0.2, 0.2, 0.2)
cell_scale = 1.6
data = {
"cells": PackedInt32Array(-524184, 103, 74, -524176, 103, 74, -524168, 103, 655436, -524192, 103, 76, -524180, 115, 73, -524191, 133, 1048636, -524169, 101, 1048657, -524178, 125, 655423, -524184, 108, 33, -524165, 103, 93, -524157, 103, 93, -524161, 102, 78, -524166, 115, 1441855)
}
metadata/_editor_floor_ = Vector3(0, -8, 0)

[node name="Ouija" parent="Decoration" instance=ExtResource("4_n5kxh")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 21.2284, -0.993719, 22.9158)

[node name="Timer" type="Timer" parent="Decoration"]
wait_time = 6.0
one_shot = true

[node name="Lamp" parent="Decoration" instance=ExtResource("3_tg436")]
transform = Transform3D(0.752622, 9.94236e-08, 0.658453, 0, -1, 1.50996e-07, 0.658453, -1.13643e-07, -0.752622, 19.5336, -0.0118636, 21.2452)

[node name="Lamp2" parent="Decoration" instance=ExtResource("7_y86gh")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 21.4914, 1.93704, 22.7156)

[node name="Lamp4" parent="Decoration" instance=ExtResource("7_y86gh")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 26.0531, 2.15754, 22.5355)

[node name="Lamp3" parent="Decoration" instance=ExtResource("7_y86gh")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 20.5985, 2.16309, 27.7429)

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="Decoration"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 25.2686, -1.90735e-06, 29.3511)
stream = ExtResource("8_scetx")
volume_db = -26.0

[node name="Cricket" type="Node3D" parent="Decoration"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.36077, 0, 18.1409)
script = ExtResource("9_d4nyy")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="Decoration/Cricket"]
stream = ExtResource("10_p7tcy")
volume_db = 3.0
max_distance = 26.0

[connection signal="timeout" from="Decoration/Timer" to="Decoration" method="_on_timer_timeout"]
[connection signal="finished" from="Decoration/Cricket/AudioStreamPlayer3D" to="Decoration/Cricket" method="_on_audio_stream_player_3d_finished"]
